# NoFrameworkRust

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/app/: mod.rs
src/app/handlers/: auth_handler.rs  mod.rs  test_handler.rs
src/app/models/: claims.rs  user.rs
src/app/router/: another_router.rs  app.rs  auth_router.rs  mod.rs  test_router.rs
src/app/services/: auth.rs  utils.rs
src/http/: connection.rs  mod.rs  thread_pool.rs  utils.rs
