[package]
name = "no_framework_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.1.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
bcrypt = "0.15"
